# oauth-for-dummies

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  config.py  google.py  medium-article.html  medium-article.md  pyproject.toml  registry.py  requirements.txt  routes.py  storage.py  style.css  test_auth_flow.py  test_providers.py
.claude/: settings.local.json
.github/workflows/: publish.yml
app/: __init__.py  config.py  main.py
app/auth/: __init__.py  routes.py  storage.py
app/learn/: __init__.py  routes.py
app/static/: style.css
app/templates/: error.html  index.html  learn_result.html  learn_start.html  profile.html
docs/: how-oauth-works.md  tutorial.md
docs/diagrams/: flow.mmd
mnt/user-data/outputs/oauth-for-dummies/providers/: __init__.py
oauth_for_dummies/: __init__.py  cli.py
oauth_for_dummies/scaffold/: dot_env_example  oauth_config.py  oauth_example_app.py  oauth_routes.py
providers/: __init__.py  base.py  discord.py  github.py  google.py  linkedin.py  microsoft.py  registry.py  spotify.py
testmyauth/: oauth_routes.py
tests/: test_auth_flow.py  test_providers.py
